--- a/src/app.css
+++ b/src/app.css
@@ -70,11 +70,13 @@
 
 @layer base {
   * {
+    box-sizing: border-box;
     @apply border-border;
   }
 
   html {
-    height: 100svh;
+    min-height: 100svh;
+
     font-family: 'Inter Variable', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
